[gd_scene load_steps=6 format=3 uid="uid://by1phinehyse3"]

[ext_resource type="PackedScene" uid="uid://bhgbrak5ipvta" path="res://worldmap/worldmap.tscn" id="1_wr4in"]
[ext_resource type="Script" path="res://dungeon/dungeon.gd" id="2_4vb7s"]
[ext_resource type="PackedScene" uid="uid://bdi7vgfmpqydh" path="res://dungeon/dungeon_tiles.tscn" id="2_cw73b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6fxqe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4hctk"]

[node name="worldmap" instance=ExtResource("1_wr4in")]

[node name="level" parent="." index="0"]
script = ExtResource("2_4vb7s")

[node name="trader_tiles" parent="level" index="0" instance=ExtResource("2_cw73b")]

[node name="teleport_from_north" type="Node2D" parent="level" index="2"]
position = Vector2(231.75, 17.5)

[node name="first_island_tp" type="Area2D" parent="level" index="3"]

[node name="collision" type="CollisionShape2D" parent="level/first_island_tp" index="0"]
position = Vector2(231.75, -6.75)
shape = SubResource("RectangleShape2D_6fxqe")

[node name="teleport_from_south" type="Node2D" parent="level" index="4"]
position = Vector2(247.5, 256)

[node name="second_island_tp" type="Area2D" parent="level" index="5"]

[node name="collision" type="CollisionShape2D" parent="level/second_island_tp" index="0"]
position = Vector2(247.75, 276.25)
shape = SubResource("RectangleShape2D_4hctk")

[connection signal="body_entered" from="level/first_island_tp" to="level" method="_on_first_island_tp_body_entered"]
[connection signal="body_entered" from="level/second_island_tp" to="level" method="_on_second_island_tp_body_entered"]
